<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleInformation"
                android:layout_centerInParent="true"
                android:fontFamily="serif-monospace"
                android:textColor="@color/colorRojoOscuro"
                android:textStyle="bold"
                android:textSize="@dimen/titlesize"/>
            />
        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_below="@id/relative"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@color/colorVerde"/>

        <LinearLayout
            android:layout_below="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginBotton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logoInfo"
                    android:textColor="@color/colorceleste"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitlesize"
                    android:ems="6"/>

                <TextView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorNegro"
                    android:textSize="@dimen/normalsize"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginBotton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameInfo"
                    android:textColor="@color/colorceleste"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitlesize"
                    android:ems="6"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorNegro"
                    android:textSize="@dimen/normalsize"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginBotton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yearInfo"
                    android:textColor="@color/colorceleste"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitlesize"
                    android:ems="6"/>

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorNegro"
                    android:textSize="@dimen/normalsize"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginBotton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gamesPlayedInfo"
                    android:textColor="@color/colorceleste"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitlesize"
                    android:ems="6"/>

                <TextView
                    android:id="@+id/numgames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorNegro"
                    android:textSize="@dimen/normalsize"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginBotton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalGamesInfo"
                    android:textColor="@color/colorceleste"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitlesize"
                    android:ems="6"/>

                <TextView
                    android:id="@+id/totalgames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorNegro"
                    android:textSize="@dimen/normalsize"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/marginBotton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teamsInfo"
                    android:textColor="@color/colorceleste"
                    android:textStyle="bold"
                    android:textSize="@dimen/subtitlesize"
                    android:ems="6"/>

                <TextView
                    android:id="@+id/numteams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorNegro"
                    android:textSize="@dimen/normalsize"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>